	* added a new call "sc_game info nextMoveUCI"
	* new feature to review game. The user guesses moves played from one side of a played game.
	* game browser : automatically flip board if the main board is flipped
	* updated Scid icon (thanks to Israel Chauca Fuentes)
	* First version of VIAF/PND support for hooking up Wikipedia et al.
	* Correspondence Chess:
		- Sorting of the gamelist  by various criteria like own clock, opponent clock (Xfcc only)
		- Do not show games where the player does not have the move (Xfcc only)
		- Add GUI to set sort criteria
		- Implement sort by "time per move till next TC" including the next timing period (Suggested by Dhanish)
		- Add Edit menu to cc window
- Translations:
---------------
	* updated spanish translation (thanks to Benigno Hernández)
	* updated swedish translation (thanks to Hans Eriksson)
	* updated german translation

[January 2010 ]

scid-4.1
========
- Features :
------------
- Added the display of arrows when several variations are available. The display can be toggled using the menu Options -> Moves -> Show arrows for variations (Thanks to Fulvio)
- When playing a move already existing in a variation, the variation is automatically entered into. To add a new variation starting with the same move, the menu Edit-> Add variation must be used (Thanks to Fulvio)
- Added undo feature (10 undos max). Shortcut is Ctrl-z. 
    For coders : rollback points are set by calling {sc_game undoPoint} in Tcl or sc_game_save_for_undo() in C++.
- Updated Scid Pocket to new base format (version 4). Version 4.1 includes Robbolito chess engine, which is by far the best of all ! Really impressive. It outweighs all other engines on Pocket PC.
- Fixes :
---------
- entering comments for last move of a line was broken
- setting the blunder flag from maintenance window was broken ("?" was considered part of a regular expression)
- when compacting a game file, custom flags description was lost