@@ -4,6 +4,8 @@
 |                                                           |
  ===========================================================
 
+- Game info area: show transcription of custom flags.
+
 ----------------------------------------------------------------------
 
 1) turn on the "Show Suggested Move" option.
