@@ -59,8 +59,8 @@ typedef unsigned short versionT;
 const versionT SCID_VERSION = 400;     // Current file format version = 4.0
 const versionT SCID_OLDEST_VERSION = 400; // Oldest compatible format: 4.0
 
-const char SCID_VERSION_STRING[] = "4.2.2";     // Current Scid version
-const char SCID_VERSION_DATE[] = "January 2010";
+const char SCID_VERSION_STRING[] = "4.3";     // Current Scid version
+const char SCID_VERSION_DATE[] = "February 2011";
 const char SCID_WEBSITE[] = "http://scid.sourceforge.net/";
 
 const char TREEFILE_SUFFIX[] = ".stc";
