@@ -36,11 +36,14 @@
 
 // Piece letters translation
 int language = 0; // default to english
-//  0 = en, 1 = fr, 2 = es, 3 = de, 4 = it, 5 = ne, 6 = cz
-//  7 = hu, 8 = no, 9 = sw, 10 = ca, 11 = fi
-const char * langPieces[] = { "", "PPKRQDRTBFNC", "PPKRQDRTBANC", "PBKKQDRTBLNS", 
+//  0 = en, 
+//  1 = fr, 2 = es, 3 = de, 4 = it, 5 = ne, 6 = cz
+//  7 = hu, 8 = no, 9 = sw, 10 = ca, 11 = fi, 12 = gr
+//  TODO Piece translations for greek
+const char * langPieces[] = { "", 
+"PPKRQDRTBFNC", "PPKRQDRTBANC", "PBKKQDRTBLNS", 
 "PPKRQDRTBANC", "PpKKQDRTBLNP", "PPKKQDRVBSNJ",
-"PGKKQVRBBFNH", "PBKKQDRTBLNS", "PBKKQDRTBLNS", "PPKRQDRTBANC", "PSKKQDRTBLNR" };
+"PGKKQVRBBFNH", "PBKKQDRTBLNS", "PBKKQDRTBLNS", "PPKRQDRTBANC", "PSKKQDRTBLNR", "" };
 
 //~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 // transPieces():
